manifests/showks-canvas-hideo/manifest.yaml
---
# Source: showks-canvas/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: showks-canvas-hideo
  namespace: showks
  labels:
    app: showks-canvas-hideo
    class: showks-canvas
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: app-port
  selector:
    app: showks-canvas-hideo

---
# Source: showks-canvas/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: showks-canvas-hideo
  namespace: showks
  labels:
    app: showks-canvas-hideo
    class: showks-canvas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: showks-canvas-hideo
  template:
    metadata:
      labels:
        app: showks-canvas-hideo
        class: showks-canvas
    spec:
      containers:
        - name: showks-canvas-hideo
          image: gcr.io/ipc-containerdays/showks-canvas-hideo:prod-761246ad7481e0d2f5203e2eb612a4fdc890b914
          ports:
            - name: app-port
              containerPort: 8080
              protocol: TCP

---
# Source: showks-canvas/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: showks-canvas-hideo
  namespace: showks
  labels:
    class: showks-canvas
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "showks-canvas-hideo"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - showks-canvas-hideo.prod.showks.containerdays.jp
      secretName: tls-certificate
  rules:
  - host: showks-canvas-hideo.prod.showks.containerdays.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: showks-canvas-hideo
          servicePort: 8080
